--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<canvas id="c"></canvas>
 	<script type="module" src="./scene2.js"></script>
 	<link rel="stylesheet" href="style.css">
+	<!-- <script src="stemkoski.github.com-master/Three.js/js/THREEx.KeyboardState.js"></script> -->
 </head>
 
 <body>
