--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
 	<canvas id="c"></canvas>
-	<script type="module" src="./scene2.js"></script>
+	<script type="module" src="./wall.js"></script>
 	<link rel="stylesheet" href="style.css">
+	<!-- <script src="stemkoski.github.com-master/Three.js/js/THREEx.KeyboardState.js"></script> -->
 </head>
 
 <body>
