--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<canvas id="c"></canvas>
-	<script type="module" src="./wall.js"></script>
+	<script type="module" src="./wall1.js"></script>
 	<link rel="stylesheet" href="style.css">
 	<!-- <script src="stemkoski.github.com-master/Three.js/js/THREEx.KeyboardState.js"></script> -->
 </head>
